WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31831
[Android] The select elements do not reflect the actual choice the user makes.
https://bugs.webkit.org/show_bug.cgi?id=31831
Summary
[Android] The select elements do not reflect the actual choice the user makes.
Andrei Popescu
Reported
2009-11-24 06:57:19 PST
<select multiple="multiple"> elements always show the first of the available choices instead of the first item that was actually selected by the user.
Attachments
Handle the drawing of ListBoxes in Android code. Also fix exisiting style issues.
(9.13 KB, patch)
2009-11-25 07:47 PST
,
Andrei Popescu
dglazkov
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrei Popescu
Comment 1
2009-11-25 07:47:07 PST
Created
attachment 43846
[details]
Handle the drawing of ListBoxes in Android code. Also fix exisiting style issues.
Dimitri Glazkov (Google)
Comment 2
2009-11-25 08:01:50 PST
Comment on
attachment 43846
[details]
Handle the drawing of ListBoxes in Android code. Also fix exisiting style issues. Thanks for cleaning up the old code! r=me, except:
> bool RenderThemeAndroid::paintTextArea(RenderObject* obj, const RenderObject::PaintInfo& info, const IntRect& rect) > { > - if (obj->isMenuList()) > - return paintCombo(obj, info, rect); > + if (obj->isListBox()) { > + paintCombo(obj, info, rect);
Can this be just an early return?
Ben Murdoch
Comment 3
2009-11-25 08:31:09 PST
(In reply to
comment #2
)
> (From update of
attachment 43846
[details]
) > Thanks for cleaning up the old code! > > r=me, except: > > > bool RenderThemeAndroid::paintTextArea(RenderObject* obj, const RenderObject::PaintInfo& info, const IntRect& rect) > > { > > - if (obj->isMenuList()) > > - return paintCombo(obj, info, rect); > > + if (obj->isListBox()) { > > + paintCombo(obj, info, rect); > > Can this be just an early return?
I can make this change on landing.
Ben Murdoch
Comment 4
2009-11-25 08:51:12 PST
Landed as
r51386
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug