The select elements do not reflect the actual choice the user makes. https://bugs.webkit.org/show_bug.cgi?id=31831

Patch by Andrei Popescu <andreip@google.com> on 2009-11-25
Reviewed by Dimitri Glazkov.

Handle the drawing of the listboxes in Android code.

No new features, just fixing an Android problem. Existing layout tests are sufficient.

* platform/android/RenderThemeAndroid.cpp:
(WebCore::theme):
(WebCore::RenderThemeAndroid::platformActiveSelectionBackgroundColor):
(WebCore::RenderThemeAndroid::platformActiveListBoxSelectionBackgroundColor):
(WebCore::RenderThemeAndroid::platformInactiveListBoxSelectionBackgroundColor):
(WebCore::RenderThemeAndroid::platformActiveListBoxSelectionForegroundColor):
(WebCore::RenderThemeAndroid::platformInactiveListBoxSelectionForegroundColor):
(WebCore::RenderThemeAndroid::adjustButtonStyle):
(WebCore::RenderThemeAndroid::paintTextArea):
(WebCore::RenderThemeAndroid::adjustListboxStyle):
* platform/android/RenderThemeAndroid.h:



Canonical link: https://commits.webkit.org/42815@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51386 268f45cc-cd09-0410-ab3c-d52691b4dbfc