WebCore/platform/android/RenderThemeAndroid.h
@@ -63,7 +63,12 @@ public:
     virtual Color platformActiveSelectionForegroundColor() const;
     virtual Color platformInactiveSelectionForegroundColor() const;
     virtual Color platformTextSearchHighlightColor() const;
-    
+
+    virtual Color platformActiveListBoxSelectionBackgroundColor() const;
+    virtual Color platformInactiveListBoxSelectionBackgroundColor() const;
+    virtual Color platformActiveListBoxSelectionForegroundColor() const;
+    virtual Color platformInactiveListBoxSelectionForegroundColor() const;
+
     virtual void systemFont(int, WebCore::FontDescription&) const {}
 
     virtual int minimumMenuListSize(RenderStyle*) const { return 0; }
